testsuite/tests/parsing/broken_invariants.compilers.reference
Line 12, characters 20-25:
12 | let empty_tuple = [%tuple];;
                         ^^^^^
Error: broken invariant in parsetree: Tuples must have at least 2 components.
Line 1, characters 21-27:
1 | let empty_record = [%record];;
                         ^^^^^^
Error: broken invariant in parsetree: Records cannot be empty.
Line 1, characters 20-27:
1 | let empty_apply = [%no_args f];;
                        ^^^^^^^
Error: broken invariant in parsetree: Function application with no argument.
Line 1, characters 19-45:
1 | let f = function [%record_with_functor_fields] -> ();;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: broken invariant in parsetree: Functor application not allowed here.
Line 1, characters 3-12:
1 | [%%empty_let];;
       ^^^^^^^^^
Error: broken invariant in parsetree: Let with no bindings.
Line 1, characters 3-13:
1 | [%%empty_type];;
       ^^^^^^^^^^
Error: broken invariant in parsetree: Type declarations cannot be empty.
Line 2, characters 4-15:
2 |  [%%missing_rhs]
        ^^^^^^^^^^^
Error: broken invariant in parsetree: Module type substitution with no right hand side
Line 2, characters 9-26:
2 | let f ([%lt_empty_open_pat]) = ();;
             ^^^^^^^^^^^^^^^^^
Error: broken invariant in parsetree: Open tuple patterns must have at least one component.
Line 1, characters 9-28:
1 | let f ([%lt_short_closed_pat]) = ();;
             ^^^^^^^^^^^^^^^^^^^
Error: broken invariant in parsetree: Closed tuple patterns must have at least 2 components.
File "_none_", line 1:
Error: broken invariant in parsetree: Nested pattern constraints must all specify a type
Line 2, characters 13-38:
2 | let f (_ : [%alias_with_too_many_nones]) = ();;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: broken invariant in parsetree: Alias types must have a name or a jkind.

